listen to audio and access
have access to dataset, able to listen to said audio file, converted from .flac to .wav as wav has better clarity

--- a/ml-models/deepfake-detection.ipynb
+++ b/ml-models/deepfake-detection.ipynb
@@ -19,11 +19,49 @@
     "print(torch.cuda.is_available())         # should return True\n",
     "print(torch.cuda.get_device_name(0))     # should say \"NVIDIA GeForce RTX 3060\"\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "IMPORTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For data manipulation and analysis \n",
+    "import pandas as pd\n",
+    "\n",
+    "# For numerical operations and array handling \n",
+    "import numpy as np\n",
+    "\n",
+    "# For creating plots and visualisations\n",
+    "import matplotlib.pylab as plt\n",
+    "\n",
+    "# For advanced data visualisations \n",
+    "import seaborn as sns\n",
+    "\n",
+    "# For file pattern matching \n",
+    "import glob as glob\n",
+    "\n",
+    "# For audio processing \n",
+    "import librosa\n",
+    "\n",
+    "# For displaying audio data visually \n",
+    "import librosa.display\n",
+    "\n",
+    "# For playing audio directly in notebooks \n",
+    "import IPython.display as ipd\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "voice-auth-ml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
