base firebase auth
implemented basic firebase auth that works, but need to do better styling

--- a/ml-models/voice-authentication.ipynb
+++ b/ml-models/voice-authentication.ipynb
@@ -176,6 +176,23 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pre-Processing "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Dataset split\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
