added the base speech to text system
speech to text system works such that when string passphrase is set, when that is spoken the program stops

--- a/ml-models/voice-authentication.ipynb
+++ b/ml-models/voice-authentication.ipynb
@@ -366,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Spliting train and validaion "
+    "Spliting train and validaion(80/20 split)"
    ]
   },
   {
@@ -383,9 +383,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import shutil\n",
-    "import random\n",
     "\n",
     "# Path to the dataset with 150 speaker folders\n",
     "source_path = os.path.join(os.getcwd(), 'datasets', 'vox1_subset_150')\n",
