--- a/ml-models/voice-authentication.ipynb
+++ b/ml-models/voice-authentication.ipynb
@@ -251,11 +251,9 @@
     "        hasher.update(f.read())\n",
     "    return hasher.hexdigest()\n",
     "\n",
-    "# paths\n",
     "test_path = os.path.join(os.getcwd(), 'datasets', 'vox1_subset_test')\n",
     "train_path = os.path.join(os.getcwd(), 'datasets', 'vox1_subset_150')\n",
     "\n",
-    "# Map filenames to full paths\n",
     "def get_file_map(base_path):\n",
     "    file_map = {}\n",
     "    for root, _, files in os.walk(base_path):\n",
@@ -266,7 +264,6 @@
     "test_files = get_file_map(test_path)\n",
     "train_files = get_file_map(train_path)\n",
     "\n",
-    "# Compare common files\n",
     "common = set(test_files).intersection(train_files)\n",
     "print(f\"Found {len(common)} common files.\\n\")\n",
     "\n",
@@ -293,35 +290,28 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Path to the dataset with 150 speaker folders\n",
     "source_path = os.path.join(os.getcwd(), 'datasets', 'vox1_subset_150')\n",
     "\n",
-    "# Output subfolders for train and val\n",
     "train_folder = os.path.join(source_path, 'train_data')\n",
     "val_folder = os.path.join(source_path, 'val_data')\n",
     "\n",
-    "# Create output folders if they don't exist\n",
     "os.makedirs(train_folder, exist_ok=True)\n",
     "os.makedirs(val_folder, exist_ok=True)\n",
     "\n",
-    "# Get all speaker folders \n",
     "speaker_folders = [folder for folder in os.listdir(source_path)\n",
     "                   if os.path.isdir(os.path.join(source_path, folder)) and folder not in ['train_data', 'val_data']]\n",
     "\n",
-    "# Shuffle and split 80/20\n",
     "random.seed(42)\n",
     "random.shuffle(speaker_folders)\n",
     "split_index = int(0.8 * len(speaker_folders))\n",
     "train_speakers = speaker_folders[:split_index]\n",
     "val_speakers = speaker_folders[split_index:]\n",
     "\n",
-    "# Copy folders to train_data\n",
     "for speaker in train_speakers:\n",
     "    src = os.path.join(source_path, speaker)\n",
     "    dst = os.path.join(train_folder, speaker)\n",
     "    shutil.move(src, dst)\n",
     "\n",
-    "# Copy folders to val_data\n",
     "for speaker in val_speakers:\n",
     "    src = os.path.join(source_path, speaker)\n",
     "    dst = os.path.join(val_folder, speaker)\n",
@@ -346,7 +336,6 @@
    "source": [
     "import os\n",
     "\n",
-    "# Root dataset path\n",
     "source_path = os.path.join(os.getcwd(), 'datasets', 'vox1_subset_150')\n",
     "\n",
     "# Train and validation folders\n",
@@ -1092,7 +1081,7 @@
     "\n",
     "        mfcc = torch.tensor(load(\"mfcc\"), dtype=torch.float32).mean(dim=1)     \n",
     "        chroma = torch.tensor(load(\"chroma\"), dtype=torch.float32).mean(dim=1)  \n",
-    "        tonnetz = torch.tensor(load(\"tonnetz\"), dtype=torch.float32).mean(dim=1) ]\n",
+    "        tonnetz = torch.tensor(load(\"tonnetz\"), dtype=torch.float32).mean(dim=1) \n",
     "        contrast = torch.tensor(load(\"contrast\"), dtype=torch.float32).mean(dim=1)  \n",
     "        mel = torch.tensor(load(\"mel\"), dtype=torch.float32).unsqueeze(0)  \n",
     "\n",
@@ -1199,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2181,7 +2170,7 @@
    "source": [
     "dataset = AudioFeatureDataset(\"datasets/vox1_subset_150/val_features\")\n",
     "model = AudioFusionModel(num_classes=len(dataset.label_map))\n",
-    "train(model, dataset,30)\n"
+    "#train(model, dataset,30)\n"
    ]
   },
   {
@@ -2209,8 +2198,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (459767717.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    return mel, mfcc, chroma, tonnetz, contrast, rel_path, torch.tensor(label)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
+   "source": [
+    "#testing the new upated model\n"
+   ]
   }
  ],
  "metadata": {
