--- a/ml-models/voice-identification-tuning.ipynb
+++ b/ml-models/voice-identification-tuning.ipynb
@@ -209,12 +209,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "\n",
-    "\n",
     "\n",
     "class ConvolutionLSTMBlock(nn.Module):\n",
     "    def __init__(self):\n",
@@ -228,29 +225,30 @@
     "        self.bn2 = nn.BatchNorm2d(64)\n",
     "        self.pool2 = nn.AvgPool2d(2)\n",
     "\n",
-    "\n",
     "        self.conv3 = nn.Conv2d(64, 128, kernel_size=3, padding=1)\n",
     "        self.bn3 = nn.BatchNorm2d(128)\n",
     "        self.pool3 = nn.AvgPool2d(2)\n",
     "\n",
-    "\n",
     "        self.conv4 = nn.Conv2d(128, 256, kernel_size=3, padding=1)\n",
     "        self.bn4 = nn.BatchNorm2d(256)\n",
-    "        self.pool4 = nn.AdaptiveAvgPool2d((32, 8))  \n",
+    "        self.pool4 = nn.AdaptiveAvgPool2d((32, 8))  # Fixed output shape\n",
     "\n",
-    "        self.dropout = nn.Dropout(0.1)\n",
+    "        self.dropout = nn.Dropout(0.3)  # Increased dropout\n",
     "\n",
-    "        self.lstm = nn.LSTM(input_size=8 * 256, hidden_size=512,\n",
-    "                            num_layers=2, batch_first=True, bidirectional=True)\n",
+    "        self.lstm = nn.LSTM(\n",
+    "            input_size=8 * 256,  # 8 = width after pooling, 256 = channels\n",
+    "            hidden_size=256,     # reduced hidden size for generalisation\n",
+    "            num_layers=2,\n",
+    "            batch_first=True,\n",
+    "            bidirectional=True\n",
+    "        )\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = F.leaky_relu(self.bn1(self.conv1(x)))\n",
-    "        \n",
     "        x = self.pool1(x)\n",
     "\n",
     "        x = F.leaky_relu(self.bn2(self.conv2(x)))\n",
     "        x = self.pool2(x)\n",
-    "\n",
     "\n",
     "        x = F.leaky_relu(self.bn3(self.conv3(x)))\n",
     "        x = self.pool3(x)\n",
@@ -262,43 +260,32 @@
     "        x = x.permute(0, 2, 1, 3).reshape(x.size(0), 32, -1)\n",
     "\n",
     "        out, _ = self.lstm(x)\n",
-    "        return out[:, -1, :]  \n",
+    "        return out[:, -1, :]  # final time step output\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
     "\n",
     "class DenseNeuralNetwork(nn.Module):\n",
     "    def __init__(self, input_dim, output_dim=128):\n",
     "        super(DenseNeuralNetwork, self).__init__()\n",
-    "        \n",
+    "\n",
     "        self.fc1 = nn.Linear(input_dim, 256)\n",
     "        self.bn1 = nn.BatchNorm1d(256)\n",
-    "        \n",
+    "\n",
     "        self.fc2 = nn.Linear(256, 256)\n",
     "        self.bn2 = nn.BatchNorm1d(256)\n",
-    "        \n",
-    "        self.fc3 = nn.Linear(256, output_dim)\n",
-    "        self.bn3 = nn.BatchNorm1d(output_dim)\n",
     "\n",
+    "        self.fc3 = nn.Linear(256, output_dim)\n",
     "        self.dropout = nn.Dropout(0.3)\n",
     "        self.relu = nn.ReLU()\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.relu(self.bn1(self.fc1(x)))\n",
     "        x = self.dropout(x)\n",
-    "        \n",
+    "\n",
     "        x = self.relu(self.bn2(self.fc2(x)))\n",
     "        x = self.dropout(x)\n",
-    "        \n",
-    "        x = self.relu(self.bn3(self.fc3(x)))\n",
-    "        return x\n",
-    "    \n",
     "\n",
+    "        x = self.fc3(x)  # no activation here\n",
+    "        return x\n",
     "\n",
     "\n",
     "class AudioFusionModel(nn.Module):\n",
@@ -311,17 +298,17 @@
     "        self.tonnetz_branch = DenseNeuralNetwork(input_dim=6)\n",
     "        self.contrast_branch = DenseNeuralNetwork(input_dim=7)\n",
     "\n",
+    "        # Mel output: 512 (from 2x 256 LSTM), others: 4 * 128\n",
     "        self.fc_fusion = nn.Sequential(\n",
-    "            nn.Linear(1024 + 4 * 128, 512),\n",
+    "            nn.Linear(512 + 4 * 128, 384),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.3),\n",
+    "            nn.Linear(384, 256),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(0.2),\n",
-    "            nn.Linear(512, 256),\n",
-    "            nn.ReLU(),  \n",
-    "            nn.Dropout(0.1),\n",
     "        )\n",
     "\n",
-    "        self.embedding_out = nn.Linear(256, 128)  \n",
-    "\n",
+    "        self.embedding_out = nn.Linear(256, 128)  # Final speaker embedding\n",
     "\n",
     "    def forward(self, mel, mfcc, chroma, tonnetz, contrast):\n",
     "        mel_out = self.mel_branch(mel)\n",
@@ -332,8 +319,9 @@
     "\n",
     "        combined = torch.cat([mel_out, mfcc_out, chroma_out, tonnetz_out, contrast_out], dim=1)\n",
     "        fusion = self.fc_fusion(combined)\n",
-    "        embedding = self.embedding_out(fusion)\n",
-    "        return embedding\n"
+    "        embedding = self.embedding_out(fusion)  # No activation here\n",
+    "        return embedding\n",
+    "\n"
    ]
   },
   {
@@ -448,8 +436,6 @@
     "        for param_group in optimizer.param_groups:\n",
     "            print(f\"Learning rate: {param_group['lr']:.6f}\")\n",
     "    \n",
-    "    torch.save(model.state_dict(), \"voice_model.pth\")\n",
-    "    print(\"\\nModel saved to 'model.pth'\")\n",
     "\n",
     "    # Plotting loss curve\n",
     "    plt.figure(figsize=(8, 5))\n",
@@ -478,14 +464,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dataset = AudioFeatureDataset(\"datasets/vox1_subset_150/val_features\")\n",
+    "base_dataset = AudioFeatureDataset(\"datasets/vox1_subset_150/features_aligned_ready\")\n",
     "triplet_dataset = TripletAudioDataset(base_dataset)\n",
     "\n",
-    "model = AudioFusionModel()  \n",
+    "model = AudioFusionModel()\n",
+    "\n",
     "train_triplet(model, triplet_dataset, epochs=100, batch_size=32, lr=0.001, device='cuda')    # Save model\n",
     "\n",
-    "torch.save(model.state_dict(), \"voice_model.pth\")\n",
-    "print(\"\\nModel saved to 'val_model.pth'\")\n"
+    "torch.save(model.state_dict(), \"voice_model_tune.pth\")\n",
+    "print(\"\\nModel saved\")\n"
    ]
   },
   {
