pre trained model working well
pr trained model workign well from speech brain,deepfake is still bad in sign in phase. but stillneed to ry and get the model workign again from own to compare

--- a/ml-models/deepfake-detection.ipynb
+++ b/ml-models/deepfake-detection.ipynb
@@ -945,6 +945,91 @@
     "evaluate_on_test_set(model, test_dataset)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scanning audio files: 100%|██████████| 43839/43839 [04:36<00:00, 158.77it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Silent audio files found: 22\n",
+      "11475.wav — 99.92% silent\n",
+      "12309.wav — 92.17% silent\n",
+      "14985.wav — 98.49% silent\n",
+      "15113.wav — 98.02% silent\n",
+      "15884.wav — 90.82% silent\n",
+      "17006.wav — 99.39% silent\n",
+      "18769.wav — 98.50% silent\n",
+      "18926.wav — 99.34% silent\n",
+      "1953.wav — 95.44% silent\n",
+      "21183.wav — 99.46% silent\n",
+      "21680.wav — 96.36% silent\n",
+      "22377.wav — 95.03% silent\n",
+      "26614.wav — 90.91% silent\n",
+      "2762.wav — 93.87% silent\n",
+      "5802.wav — 96.03% silent\n",
+      "7169.wav — 95.97% silent\n",
+      "9076.wav — 97.67% silent\n",
+      "12309.wav — 92.17% silent\n",
+      "18926.wav — 99.34% silent\n",
+      "21183.wav — 99.46% silent\n",
+      "2762.wav — 93.87% silent\n",
+      "26614.wav — 90.91% silent\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import librosa\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm  # Add this\n",
+    "\n",
+    "root_dir = \"datasets/release_in_the_wild\"\n",
+    "threshold = 0.001\n",
+    "min_silence_ratio = 0.9\n",
+    "\n",
+    "silent_files = []\n",
+    "\n",
+    "# Collect all .wav files first for progress tracking\n",
+    "all_wav_files = []\n",
+    "for subdir, _, files in os.walk(root_dir):\n",
+    "    for file in files:\n",
+    "        if file.endswith(\".wav\"):\n",
+    "            all_wav_files.append(os.path.join(subdir, file))\n",
+    "\n",
+    "# Use tqdm to show progress\n",
+    "for path in tqdm(all_wav_files, desc=\"Scanning audio files\"):\n",
+    "    try:\n",
+    "        y, sr = librosa.load(path, sr=22050)\n",
+    "        silence_ratio = np.mean(np.abs(y) < threshold)\n",
+    "        if silence_ratio > min_silence_ratio:\n",
+    "            silent_files.append((os.path.basename(path), silence_ratio))\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error reading {os.path.basename(path)}: {e}\")\n",
+    "\n",
+    "print(f\"\\nSilent audio files found: {len(silent_files)}\")\n",
+    "for file, ratio in silent_files:\n",
+    "    print(f\"{file} — {ratio*100:.2f}% silent\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
