email is now working with other ones
email set up new method, cleanign up code make it more readable anddeleting any duplicate and redundant code

--- a/ml-models/voice-identification.ipynb
+++ b/ml-models/voice-identification.ipynb
@@ -266,12 +266,6 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "\n",
     "class DenseNeuralNetwork(nn.Module):\n",
     "    def __init__(self, input_dim, output_dim=128):\n",
     "        super(DenseNeuralNetwork, self).__init__()\n",
@@ -334,6 +328,145 @@
     "        fusion = self.fc_fusion(combined)\n",
     "        embedding = self.embedding_out(fusion)\n",
     "        return embedding\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "193c44a1",
+   "metadata": {},
+   "source": [
+    "Tuned Model Architecture\n",
+    "To test replace the code aboev with this version:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3e09246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "TUNED MODEL ARCHITECTURE\n",
+    "\"\"\"\n",
+    "\n",
+    "\"\"\"\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class ConvolutionLSTMBlock(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.conv1 = nn.Conv2d(1, 32, kernel_size=5, padding=2)\n",
+    "        self.bn1 = nn.BatchNorm2d(32)\n",
+    "        self.pool1 = nn.AvgPool2d(2)\n",
+    "\n",
+    "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, padding=1)\n",
+    "        self.bn2 = nn.BatchNorm2d(64)\n",
+    "        self.pool2 = nn.AvgPool2d(2)\n",
+    "\n",
+    "        self.conv3 = nn.Conv2d(64, 128, kernel_size=3, padding=1)\n",
+    "        self.bn3 = nn.BatchNorm2d(128)\n",
+    "        self.pool3 = nn.AvgPool2d(2)\n",
+    "\n",
+    "        self.conv4 = nn.Conv2d(128, 256, kernel_size=3, padding=1)\n",
+    "        self.bn4 = nn.BatchNorm2d(256)\n",
+    "        self.pool4 = nn.AdaptiveAvgPool2d((32, 8))  # Fixed output shape\n",
+    "\n",
+    "        self.dropout = nn.Dropout(0.3)  # Increased dropout\n",
+    "\n",
+    "        self.lstm = nn.LSTM(\n",
+    "            input_size=8 * 256,  # 8 = width after pooling, 256 = channels\n",
+    "            hidden_size=256,     # reduced hidden size for generalisation\n",
+    "            num_layers=2,\n",
+    "            batch_first=True,\n",
+    "            bidirectional=True\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = F.leaky_relu(self.bn1(self.conv1(x)))\n",
+    "        x = self.pool1(x)\n",
+    "\n",
+    "        x = F.leaky_relu(self.bn2(self.conv2(x)))\n",
+    "        x = self.pool2(x)\n",
+    "\n",
+    "        x = F.leaky_relu(self.bn3(self.conv3(x)))\n",
+    "        x = self.pool3(x)\n",
+    "\n",
+    "        x = F.leaky_relu(self.bn4(self.conv4(x)))\n",
+    "        x = self.pool4(x)\n",
+    "\n",
+    "        x = self.dropout(x)\n",
+    "        x = x.permute(0, 2, 1, 3).reshape(x.size(0), 32, -1)\n",
+    "\n",
+    "        out, _ = self.lstm(x)\n",
+    "        return out[:, -1, :]  # final time step output\n",
+    "\n",
+    "\n",
+    "class DenseNeuralNetwork(nn.Module):\n",
+    "    def __init__(self, input_dim, output_dim=128):\n",
+    "        super(DenseNeuralNetwork, self).__init__()\n",
+    "\n",
+    "        self.fc1 = nn.Linear(input_dim, 256)\n",
+    "        self.bn1 = nn.BatchNorm1d(256)\n",
+    "\n",
+    "        self.fc2 = nn.Linear(256, 256)\n",
+    "        self.bn2 = nn.BatchNorm1d(256)\n",
+    "\n",
+    "        self.fc3 = nn.Linear(256, output_dim)\n",
+    "        self.dropout = nn.Dropout(0.3)\n",
+    "        self.relu = nn.ReLU()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.relu(self.bn1(self.fc1(x)))\n",
+    "        x = self.dropout(x)\n",
+    "\n",
+    "        x = self.relu(self.bn2(self.fc2(x)))\n",
+    "        x = self.dropout(x)\n",
+    "\n",
+    "        x = self.fc3(x)  # no activation here\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "class AudioFusionModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.mel_branch = ConvolutionLSTMBlock()\n",
+    "        self.mfcc_branch = DenseNeuralNetwork(input_dim=40)\n",
+    "        self.chroma_branch = DenseNeuralNetwork(input_dim=12)\n",
+    "        self.tonnetz_branch = DenseNeuralNetwork(input_dim=6)\n",
+    "        self.contrast_branch = DenseNeuralNetwork(input_dim=7)\n",
+    "\n",
+    "        # Mel output: 512 (from 2x 256 LSTM), others: 4 * 128\n",
+    "        self.fc_fusion = nn.Sequential(\n",
+    "            nn.Linear(512 + 4 * 128, 384),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.3),\n",
+    "            nn.Linear(384, 256),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.2),\n",
+    "        )\n",
+    "\n",
+    "        self.embedding_out = nn.Linear(256, 128)  # Final speaker embedding\n",
+    "\n",
+    "    def forward(self, mel, mfcc, chroma, tonnetz, contrast):\n",
+    "        mel_out = self.mel_branch(mel)\n",
+    "        mfcc_out = self.mfcc_branch(mfcc)\n",
+    "        chroma_out = self.chroma_branch(chroma)\n",
+    "        tonnetz_out = self.tonnetz_branch(tonnetz)\n",
+    "        contrast_out = self.contrast_branch(contrast)\n",
+    "\n",
+    "        combined = torch.cat([mel_out, mfcc_out, chroma_out, tonnetz_out, contrast_out], dim=1)\n",
+    "        fusion = self.fc_fusion(combined)\n",
+    "        embedding = self.embedding_out(fusion)  # No activation here\n",
+    "        return embedding\n",
+    "\n",
+    "        \n",
+    "\"\"\""
    ]
   },
   {
@@ -513,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
