--- a/ml-models/voice-authentication.ipynb
+++ b/ml-models/voice-authentication.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "print(torch.cuda.is_available())         # should return True\n",
-    "print(torch.cuda.get_device_name(0))     # should say \"NVIDIA GeForce RTX 3060\"\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,103 +58,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Loading dataset "
+    "GPU check (Cuda)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_dir = os.path.join(os.getcwd(), 'datasets', 'voice-based-id-recognition')\n",
-    "diffPhrase = os.path.join(base_dir,'differentPhrase')\n",
-    "samePhrase = os.path.join(base_dir,'samePhrase')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Checking Dataset Location existance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory does not exist: c:\\Users\\Aadil\\Desktop\\Voice-Auth-DF-System\\ml-models\\datasets\\voice-based-id-recognition\\differentPhrase\n",
-      "Directory does not exist: c:\\Users\\Aadil\\Desktop\\Voice-Auth-DF-System\\ml-models\\datasets\\voice-based-id-recognition\\samePhrase\n"
+      "True\n",
+      "NVIDIA GeForce RTX 3060\n"
      ]
     }
    ],
    "source": [
-    "# Check if the training directory exists\n",
-    "if os.path.exists(diffPhrase):\n",
-    "    print(\"differentPhrase Directory: \")\n",
-    "    print(os.listdir(diffPhrase))\n",
-    "else:\n",
-    "    print(\"Directory does not exist:\", diffPhrase) \n",
-    "   \n",
-    "\n",
-    "# Check if the testing directory exists\n",
-    "if os.path.exists(samePhrase):\n",
-    "    \n",
-    "    print(\"samePhrase Directory: \")\n",
-    "    print(os.listdir(samePhrase))\n",
-    "else:\n",
-    "    print(\"Directory does not exist:\", samePhrase)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Listen to audio files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 18-19: truncated \\UXXXXXXXX escape (3963867248.py, line 22)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[5], line 22\u001b[1;36m\u001b[0m\n\u001b[1;33m    \"\"\"\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 18-19: truncated \\UXXXXXXXX escape\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "\n",
-    "file_path = r\"C:\\Users\\Aadil\\Desktop\\Voice-Auth-DF-System\\ml-models\\datasets\\voice-based-id-recognition\\differentPhrase\\1\\1-11.wav\"\n",
-    "\n",
-    "with wave.open(file_path, 'rb') as wav_file:\n",
-    "    num_frames = wav_file.getnframes()\n",
-    "    sample_rate = wav_file.getframerate()\n",
-    "    sample_width = wav_file.getsampwidth()\n",
-    "    channels = wav_file.getnchannels()\n",
-    "    audio_data = wav_file.readframes(num_frames)\n",
-    "\n",
-    "# Convert raw bytes to numpy array\n",
-    "audio_np = np.frombuffer(audio_data, dtype=np.int16)\n",
-    "\n",
-    "# If stereo, reshape\n",
-    "if channels == 2:\n",
-    "    audio_np = audio_np.reshape(-1, 2)\n",
-    "\n",
-    "ipd.Audio(audio_np, rate=sample_rate)\n",
-    "\n",
-    "\n",
-    "\"\"\"\n"
+    "import torch\n",
+    "print(torch.cuda.is_available())         # should return True\n",
+    "print(torch.cuda.get_device_name(0))     # should say \"NVIDIA GeForce RTX 3060\"\n"
    ]
   },
   {
@@ -177,9 +90,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Dataset split\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m base_path \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(os\u001b[38;5;241m.\u001b[39mgetcwd(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatasets\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvox1_dev\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(base_path)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m#Each folder contains a different speaker\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Dataset split\n",
     "base_path = os.path.join(os.getcwd(), 'datasets', 'vox1_dev')\n",
@@ -680,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2175,7 +2100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
